<resources>
    <string name="app_name">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go">Go</string>
    <string name="major">Major</string>
    <string name="done">Done</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="select_major">Select Major</string>


</resources>
